BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Account_Tactic_vod__c.object
<CustomObject>
    <description>This object stores all tactics created on an Account Plan</description>
    <fields>
        <fullName>Account_Plan_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to account plan.</description>
        <label>Plan</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Account_Tactic_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to master account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Tactic_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To_BMS_EMEA__c</fullName>
        <description>VPRO - October 2013 - BMS EMEA CORE Requirements &amp; Design: Custom field to capture who a tactic is assigned to. This field was created in relation to the MSM engagement plan.</description>
        <label>Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMS_Country_Code_BMS_SHARED__c</fullName>
        <description>VPRO BMS EMEA Feb-2014: created the field, used by any Region, sourced from the User Source Country field.</description>
        <formula>TEXT( Account_vod__r.Account_Source_Country_BMS_CORE__c )</formula>
        <label>BMS Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Objective_Progress_vod__c</fullName>
        <description>Sums up the progress based on Call Objective Completion represented as a percentage</description>
        <label>% Interaction Objective Progress</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Complete_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this tactic is complete.</description>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Call_Objectives_vod__c</fullName>
        <description>Contains the total number of COMPLETED Call Objectives (Completed_flag_vod = true) associated with Account Tactics within a given Account Plan</description>
        <label>Completed Interaction Objectives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Critical_Brand_Directives_Tactics_BMS_US__c</fullName>
        <inlineHelpText>Type the Brand Directives/Tactics you will use at this account – Example – ensure the following Brand Directives/Tactics are delivered effectively:</inlineHelpText>
        <label>Critical Brand Directives/Tactics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Critical_Success_Factors_BMS_US__c</fullName>
        <inlineHelpText>What are the critical success factors?</inlineHelpText>
        <label>Critical Success Factors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of tactic.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_BMS_US__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Activity_Name_BMS_EMEA__c</fullName>
        <description>BMS ACN - October 2015 (Q3 GRM) : Custom Name Field created to be used in Work Flow. This will be filled in by the user.</description>
        <label>Activity Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise_Objective_BMS_US__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Franchise Objective</label>
        <referenceTo>Franchise_Objectives_BMS_US__c</referenceTo>
        <relationshipName>Account_Tactics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Contacts_Decision_Makers_BMS_US__c</fullName>
        <inlineHelpText>Who are the key contacts/decision makers for this brand at this account?  Example – Gain support of the following key decision makers/influencers:</inlineHelpText>
        <label>Key Contacts/Decision Makers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Matrix_Partners_BMS_US__c</fullName>
        <inlineHelpText>Who are the matrix team partners you will engage for success? – Example – Ensure strong coordination with MSL to deliver clinical value proposition.</inlineHelpText>
        <label>Matrix Partners</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Objective_BMS_EMEA__c</fullName>
        <description>VPRO - October 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to store the objective of a tactic. This field is used specifically as part of the MSM Engagement Plan in EMEA.</description>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preceptorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scientific Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projects</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partners_BMS_US__c</fullName>
        <label>Partners</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Tactic_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Associates Account Tactic to Plan Tactic</description>
        <label>Strategy</label>
        <referenceTo>Plan_Tactic_vod__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Account_Tactics_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Strategy_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to product strategy associated with this tactic.</description>
        <label>Product Strategy</label>
        <referenceTo>Product_Strategy_vod__c</referenceTo>
        <relationshipName>Account_Tactic_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Tactic_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to product tactic associated with this tactic.</description>
        <label>Product Tactic</label>
        <referenceTo>Product_Tactic_vod__c</referenceTo>
        <relationshipName>Account_Tactic_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Picklist of products associated with this tactic - for display in the related list.</description>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>ATRIPLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARACLUDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDUREON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYETTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARDIOVASCULAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIABETES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELIQUIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERBITUX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMMUNOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IXEMPRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOMBIGLYZE XR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-BRANDED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NULOJIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONCOLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONGLYZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORENCIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REYATAZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRYCEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUSTIVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYMLIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSPLANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIROLOGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YERVOY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abatacept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apixaban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aripiprazol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atazanavir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belatacept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brivanib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clopidogrel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Progress_Type_vod__c</fullName>
        <description>Drives how progress is defined: whether Call Objective completion or manually (set by Key Account Manager).</description>
        <label>Progress Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call_Objective_vod</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resources_Used_Resources_Needed_BMS_US__c</fullName>
        <inlineHelpText>OneLook, Strategy, Health Outcomes, non-branded</inlineHelpText>
        <label>Resources Used/Resources Needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role_BMS_US__c</fullName>
        <description>VPRO - February 2013 - BMS Global Requirements &amp; Design: Tracking the State Triad Account Plan action plan for MM users</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>SGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overall Objectives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_BMS_EMEA__c</fullName>
        <description>VPRO - October 2013 - BMS EMEA Core Requirements &amp; Design: Customer field to store the source of a MSM engagement plan task.</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed by BMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested by TL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_BMS_US__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_BMS_CA__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Track</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_BMS_US__c</fullName>
        <label>Therapeutic Area</label>
        <picklist>
            <picklistValues>
                <fullName>HIV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiovascular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HBV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheumatoid Arthritis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kidney Transplant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Branded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timing_and_Events_Action_Plan_BMS_US__c</fullName>
        <inlineHelpText>What is the timing and events/action plan in order to be successful?</inlineHelpText>
        <label>Timing and Events/Action Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Call_Objectives_vod__c</fullName>
        <description>Contains the total number of Call Objectives associated with Account Tactics within a given Account Plan</description>
        <label>Total Interaction Objectives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Picklist describing the type of this account tactic.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-promote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficacy promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulary position</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <recordTypes>
        <fullName>Account_Tactic_vod</fullName>
        <active>true</active>
        <description>Base record type for Account Tactics</description>
        <label>Account_Tactic_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_Canada_KAM</fullName>
        <active>true</active>
        <description>Account tactics used by Canada KAM user</description>
        <label>BMS - Canada KAM</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_Access_Engagement_Plan_Task</fullName>
        <active>true</active>
        <description>Record type to support tasks in relations to the Access engagement plan</description>
        <label>BMS - EMEA - Access Engagement Plan Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_EPM_Engagement_Plan_Task</fullName>
        <active>true</active>
        <description>Record type to support tasks in relations to the EPM engagement plan</description>
        <label>BMS - EMEA - EPM Engagement Plan Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_Home_office_Engagement_Plan_Task</fullName>
        <active>true</active>
        <description>Record type to support tasks in relations to the Home Office engagement plan</description>
        <label>BMS - EMEA - Home office Engagement Plan Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_MSM_Engagement_Plan_Task</fullName>
        <active>true</active>
        <description>Record type to support tasks in relations to the MSM engagement plan</description>
        <label>BMS - EMEA - MSM Engagement Plan Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_KAM_CORE_Account_Actions</fullName>
        <active>true</active>
        <label>BMS - KAM - CORE - Account Actions</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_US_CV_KAM_Account_Tactic</fullName>
        <active>true</active>
        <label>BMS - US - CV KAM Account Tactic</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>